@@ -226,6 +226,24 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashMap
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -252,6 +270,21 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|cloud
+operator|.
+name|OverseerCollectionProcessor
+operator|.
+name|NUM_SLICES
+import|;
+end_import
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|cloud
@@ -261,16 +294,30 @@ operator|.
 name|makeMap
 import|;
 end_import
-begin_comment
-comment|//@Ignore("Not currently valid see SOLR-5580")
-end_comment
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
+name|ZkStateReader
+operator|.
+name|MAX_SHARDS_PER_NODE
+import|;
+end_import
 begin_class
 DECL|class|DeleteInactiveReplicaTest
 specifier|public
 class|class
 name|DeleteInactiveReplicaTest
 extends|extends
-name|DeleteReplicaTest
+name|AbstractFullDistribZkTestBase
 block|{
 annotation|@
 name|Test
@@ -309,11 +356,81 @@ argument_list|,
 literal|"false"
 argument_list|)
 expr_stmt|;
+name|int
+name|replicationFactor
+init|=
+literal|2
+decl_stmt|;
+name|int
+name|numShards
+init|=
+literal|2
+decl_stmt|;
+name|int
+name|maxShardsPerNode
+init|=
+operator|(
+operator|(
+operator|(
+operator|(
+name|numShards
+operator|+
+literal|1
+operator|)
+operator|*
+name|replicationFactor
+operator|)
+operator|/
+name|getCommonCloudSolrClient
+argument_list|()
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|getLiveNodes
+argument_list|()
+operator|.
+name|size
+argument_list|()
+operator|)
+operator|)
+operator|+
+literal|1
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|List
+argument_list|<
+name|Integer
+argument_list|>
+argument_list|>
+name|collectionInfos
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
 name|createCollection
 argument_list|(
+name|collectionInfos
+argument_list|,
 name|collectionName
 argument_list|,
+name|numShards
+argument_list|,
+name|replicationFactor
+argument_list|,
+name|maxShardsPerNode
+argument_list|,
 name|client
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 name|waitForRecoveriesToFinish
@@ -656,6 +773,8 @@ name|getName
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|DeleteReplicaTest
+operator|.
 name|removeAndWaitForReplicaGone
 argument_list|(
 name|collectionName
